--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
+    "start": "node src",
+    "dev": "nodemon src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,5 +31,8 @@
     "mongoose": "^5.4.14",
     "morgan": "^1.9.1",
     "multer": "^1.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.14.1"
   }
 }
