Se renombra la carpeta del servidor y se crea la ruta inicial de la aplicacion

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "node src",
-    "dev": "nodemon src",
+    "start": "node server",
+    "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
