--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server",
+    "start": "cross-env NODE_ENV=production node server",
+    "dev": "cross-env NODE_ENV=development nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
