--- a/package.json
+++ b/package.json
@@ -33,6 +33,14 @@
     "multer": "^1.4.1"
   },
   "devDependencies": {
-    "eslint": "^5.14.1"
+    "css-loader": "^2.1.0",
+    "eslint": "^5.14.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "style-loader": "^0.23.1",
+    "timeago.js": "^4.0.0-beta.2",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0"
   }
 }
