--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "postinstall": "npm run build",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --ignore client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production webpack",
